force-app/main/default/objects/CampaignMember/fields/Meta_Ad_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_Set_Id__c</fullName>
    <label>Meta Ad Set Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>