force-app/main/default/objects/CampaignMember/fields/Meta_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Meta_Interaction_Type__c</fullName>
    <label>Meta Interaction Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>