force-app/main/default/objects/CampaignMember/fields/Social_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Social_Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Interaction</label>
    <referenceTo>Social_Interaction__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>