force-app/main/default/objects/CampaignMember/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>